--- a/getdown-console/app/elements/elements.html
+++ b/getdown-console/app/elements/elements.html
@@ -4,7 +4,7 @@
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
-
+<link rel="import" href="../bower_components/byutv-jsonp/byutv-jsonp.html">
 <!-- Paper elements -->
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
@@ -22,4 +22,6 @@
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
+<link rel="import" href="download-list/download-list.html">
 <link rel="import" href="download-view/download-view.html">
+<link rel="import" href="download-data/download-data.html">
