--- a/getdown-console/app/elements/download-list/download-list.html
+++ b/getdown-console/app/elements/download-list/download-list.html
@@ -58,7 +58,7 @@
   </style>
   <template>
 
-    <iron-list id="list" class="list" items="[[downloads]]" as="download">
+    <iron-list id="list" class="list" items="{{downloads}}" as="download">
       <template>
 
         <div class="item">
