--- a/getdown-console/app/elements/elements.html
+++ b/getdown-console/app/elements/elements.html
@@ -4,7 +4,11 @@
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
-<link rel="import" href="../bower_components/byutv-jsonp/byutv-jsonp.html">
+<!--<link rel="import" href="../bower_components/byutv-jsonp/byutv-jsonp.html">-->
+<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="../bower_components/iron-list/iron-list.html">
+
+
 <!-- Paper elements -->
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
@@ -25,3 +29,4 @@
 <link rel="import" href="download-list/download-list.html">
 <link rel="import" href="download-view/download-view.html">
 <link rel="import" href="download-data/download-data.html">
+<link rel="import" href="download-list-widget/download-list-widget.html">
