--- a/getdown-console/app/elements/elements.html
+++ b/getdown-console/app/elements/elements.html
@@ -30,3 +30,4 @@
 <link rel="import" href="download-view/download-view.html">
 <link rel="import" href="download-data/download-data.html">
 <link rel="import" href="download-list-widget/download-list-widget.html">
+<link rel="import" href="ws-client/ws-client.html">
