--- a/getdown-console/app/elements/elements.html
+++ b/getdown-console/app/elements/elements.html
@@ -30,4 +30,6 @@
 <link rel="import" href="download-view/download-view.html">
 <link rel="import" href="download-data/download-data.html">
 <link rel="import" href="download-list-widget/download-list-widget.html">
+<link rel="import" href="config-data/config-data.html">
+<link rel="import" href="config-view/config-view.html">
 <link rel="import" href="ws-client/ws-client.html">
