--- a/getdown-console/src/main/resources/static/console/app/elements/ws-client/ws-client.html
+++ b/getdown-console/src/main/resources/static/console/app/elements/ws-client/ws-client.html
@@ -1,13 +1,3 @@
-<!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 
 <dom-module id="ws-client">
@@ -42,19 +32,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           stompClient.subscribe('/downloads/jobStateChange', function(message){
             var parsedMessage=JSON.parse(message.body);
             var event = new CustomEvent('wsevent-downloads-job-state-change', { 'detail': parsedMessage });
-            document.dispatchEvent(event);
+            _handleEvent(event);
           });
 
         });
       },
-      onError: function (error) {
-        this.fire('onerror', error);
-      },
-      onOpen: function (event) {
-        this.fire('onopen');
-      },
-      onMessage: function (event) {
-        this.fire('onmessage', event.data);
+      _handleEvent: function (event) {
+        this.fire('message', event.data);
       },
       send: function (message) {
         this.socket.send(message);
