--- a/getdown-console/src/main/resources/static/console/app/elements/elements.html
+++ b/getdown-console/src/main/resources/static/console/app/elements/elements.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
-
+<link rel="import" href="scripts.html">
 <!-- Iron elements -->
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
