--- a/getdown-console/src/main/resources/static/console/app/elements/ws-client/ws-client.html
+++ b/getdown-console/src/main/resources/static/console/app/elements/ws-client/ws-client.html
@@ -17,34 +17,51 @@
       socket: null,
       properties: {
         protocol: {
-          type: String
+          type: String,
+          notify:true
         },
         url: {
-          type: String
+          type: String,
+          notify: true
+        },
+        topic: {
+          type: String,
+          notify: true
         }
       },
-      ready: function () {
-        var socket = new SockJS('/ws');
-        var stompClient = Stomp.over(socket);
+      _handleEvent: function (event) {
+        this.fire('message', event.detail);
+      },
+      send: function (message) {
+        if(this.socket)
+          this.socket.send(message);
+      },
+      close: function () {
+        if(this.socket)
+          this.socket.close();
+      },
+      connect:function () {
 
+        if(this.socket)
+          this.close();
+
+        if(!this.url || !this.topic)
+          return;
+
+        this.socket = new SockJS(this.url);
+
+        var stompClient = Stomp.over(this.socket);
+        var topic=this.topic
+        var element=this
         stompClient.connect({}, function() {
 
-          stompClient.subscribe('/downloads/jobStateChange', function(message){
+          stompClient.subscribe(topic, function(message){
             var parsedMessage=JSON.parse(message.body);
             var event = new CustomEvent('wsevent-downloads-job-state-change', { 'detail': parsedMessage });
-            _handleEvent(event);
+            element._handleEvent(event);
           });
 
         });
-      },
-      _handleEvent: function (event) {
-        this.fire('message', event.data);
-      },
-      send: function (message) {
-        this.socket.send(message);
-      },
-      close: function () {
-        this.socket.close();
       }
     })
   })();
