--- a/getdown-console/src/main/resources/static/console/app/elements/elements.html
+++ b/getdown-console/src/main/resources/static/console/app/elements/elements.html
@@ -31,3 +31,4 @@
 <link rel="import" href="config-data/config-data.html">
 <link rel="import" href="config-view/config-view.html">
 <link rel="import" href="ws-client/ws-client.html">
+<link rel="import" href="download-item/download-item.html">
