--- a/getdown-console/src/main/resources/static/console/app/elements/download-item/download-item.html
+++ b/getdown-console/src/main/resources/static/console/app/elements/download-item/download-item.html
@@ -54,7 +54,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
     <div class="item">
 
-      <img class="avatar" src="../../images/icon-getdown.png">
+      <img class="avatar" src="{{icon}}">
 
       <div class="pad">
         <div class="primary">{{download.name}}</div>
@@ -87,6 +87,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         download: {
           type: Object,
           notify: true
+        },
+        icon:{
+          type: String,
+          notify: true,
+          computed: '_computeDownloadIconUrl(download)'
         },
         _hideCancel: {
           type: Boolean,
@@ -136,6 +141,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
 
         return true
+      },
+      _computeDownloadIconUrl: function(d){
+        if(d){
+          var parser = document.createElement('a');
+          parser.href = d.url;
+          return parser.protocol+'//'+parser.host+'/favicon.ico'
+        }else {
+          return '../../images/icon-getdown.png'
+        }
       }
     });
   })();
