--- a/getdown-console/src/main/resources/static/console/app/elements/elements.html
+++ b/getdown-console/src/main/resources/static/console/app/elements/elements.html
@@ -21,7 +21,8 @@
 <link rel="import" href="../bower_components/paper-styles/typography.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
-
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 
 <!-- Add your elements here -->
 <link rel="import" href="download-list/download-list.html">
@@ -32,3 +33,4 @@
 <link rel="import" href="config-view/config-view.html">
 <link rel="import" href="ws-client/ws-client.html">
 <link rel="import" href="download-item/download-item.html">
+<link rel="import" href="add-download-dialog/add-download-dialog.html">
