--- a/getdown-console/src/main/resources/static/console/app/index.html
+++ b/getdown-console/src/main/resources/static/console/app/index.html
@@ -54,7 +54,7 @@
 		<!-- sidebar -->
 		<paper-scroll-header-panel drawer fixed>
 			<paper-toolbar id="drawerToolbar">
-				<span class="menu-name">getdown</span>
+				<span flex><img  align="bottom" src="images/icon-getdown.png" style="width:32px;height:32px;"/>&nbsp;getdown</span>
 			</paper-toolbar>
 			<paper-menu class="app-menu" attr-for-selected="data-route" selected="{{route}}">
 				<a data-route="downloads" >
