--- a/getdown-webconsole/src/main/resources/static/webconsole/elements/elements.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/elements/elements.html
@@ -24,6 +24,9 @@
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 
+<!-- other elements -->
+<link rel="import" href="../bower_components/stomp-client/stomp-client.html">
+
 <!-- Add your elements here -->
 <link rel="import" href="download-list/download-list.html">
 <link rel="import" href="download-view/download-view.html">
